<resources>
    <string name="app_name">Solar</string>
    <string name="title_activity_login">Login</string>

    <!-- activity_login  -->
    <string name="user_text_hint">Email</string>
    <string name="username_text_hint">Username</string>
    <string name="password_text_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="register_button_text">Sign Up</string>

    <!-- activity_register -->
    <string name="name_user_hint_textbox">Name</string>
    <string name="name_cost_hint_textbox">Cost kW/h</string>
    <string name="lastname_user_hint_textbox">Last Name</string>
    <string name="mail_user_hint_textbox">E-mail</string>
    <string name="confirm_password_text_hint">Confirm Password</string>
    <string name="btn_add_user">Add User</string>

    <!-- activity_proyects -->
    <string name="see_proyects">See Proyects</string>
    <string name="create_new_proyect">Create New Proyect</string>

    <!-- activity_create_project -->
    <string name="project_name">Enter project name</string>
    <string name="cost_kw">Enter the kW/h cost</string>
    <string name="address_project">Address</string>
    <string name="create">Create</string>
    <string name="continue_project">Continue</string>
    <string name="select_an_option_to_locate">Select an option to locate the area</string>
    <string name="select_current_position">Select current position</string>
    <string name="introduce_address">Enter address</string>
    <string name="enter_coordinates">Enter coordinates</string>

    <!--  activity coordinates -->
    <string name="enter_coordinates_precision">Enter the coordinates for each vertex to draw the area</string>
    <string name="latitude_hint_textbox">Latitude</string>
    <string name="longitude_hint_textbox">Longitude</string>
    <string name="add_new_coordinate">Add new</string>
    <string name="delete_coordinate">Delete</string>
    <string name="view_all_coordinate">View all</string>
    <string name="list_coordinates">Coordinates list</string>
    <string name="error_lat">The length for the latitude must be longer</string>
    <string name="error_emp_lat">Latitude must not be empty</string>
    <string name="error_lon">The length for the longitude must be longer</string>
    <string name="error_emp_lon">Longitude must not be empty</string>

    <!-- current_place_menu -->
    <string name="option_get_place">Get place</string>

    <!-- maps activity current place -->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_substation">Electrical Substation</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>
        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="none_map">None</string>

    <string name="progress_dialog">Log in</string>
    <string name="please_wait">Conectando con el servidor, por favor espere un momento...</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_user_username">Este nombre de usuario no se encuentra disponible</string>
    <string name="error_user_pass">Esta contraseña es muy corta, debe contener mínimo 5 caracteres</string>
    <string name="error_user_pass_confirm">Las contraseñas no son iguales</string>
    <string name="error_user_email">Ingresa una correo válido</string>
    <string name="error_user_phone">Ingresa un teléfono válido</string>
    <string name="error_user_pass_empty">Ingrese su contraseña</string>

    <!-- Drone -->
    <string name="altitude">Altitude:</string>
    <string name="altitude_conf">Altitude Configuration</string>
    <string name="title_activity_demo">GSDemoActivity</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: 4.2.1</string>
    <string name="title_activity_projects">Solar Projects</string>

    <string name="msg_records">There are still no registered projects</string>
    <string name="title_activity_results_without_obstacles">Alternatives</string>

    <string name="processing">Processing</string>
    <string name="please_wait_pro">Predix working...</string>

    <string name="generated_energy">Generated Energy (kW)</string>
    <string name="savings">Savings</string>
    <string name="more">Show more</string>
    <string name="wait">Please wait</string>

</resources>
