<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/accent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_an_option_to_locate"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textSize="25dp"/>

        <Button
            android:id="@+id/btn_select_current_position"
            android:text="@string/select_current_position"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:textColor="@color/btn_login"/>

        <Button
            android:id="@+id/btn_enter_address"
            android:text="@string/introduce_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:textColor="@color/btn_login"/>

        <Button
            android:id="@+id/btn_enter_coordinates"
            android:text="@string/enter_coordinates"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:textColor="@color/btn_login"/>
    </LinearLayout>
</LinearLayout>

