<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/accent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/enter_coordinates_precision"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/latitude"
            android:hint="@string/latitude_hint_textbox"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>

        <EditText
            android:id="@+id/longitude"
            android:hint="@string/longitude_hint_textbox"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>

        <Button
            android:id="@+id/add_new"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/add_new_coordinate"
            android:background="@color/primary"
            android:textColor="@color/white"/>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="230dp">
        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/send"
        android:text="@string/continue_project"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreen"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
